--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Auto Tag
 
 on:
   push:
@@ -23,21 +23,3 @@ jobs:
           tag-prefix: 'v'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Export Tag
-        id: tag_name
-        run: |
-          echo ::set-output name=TAG::`cat package.json | jq -r .version`
-        shell: bash
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          name: ${{ steps.tag_name.outputs.TAG }}
-          files: |
-            openapi/spec3.yml
-            openapi/spec3.json
-
-      - name: Publish Package
-        run: |
-          npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
