--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,16 @@
 name: Release
 
-on: tag
+on:
+  push:
+    tags: v*
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Release
+      uses: softprops/action-gh-release@v0.1.13
       with:
-        name: ${{ steps.tag_name.outputs.TAG }}
         files: |
           openapi/spec3.yml
           openapi/spec3.json
