Syncing API documentation from db5ca570fa5ddfe2d561e79b39810d8a906c823f

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3575,6 +3575,7 @@ components:
         - created_at
         - updated_at
       title: Order
+      description: Forcing a change
     product:
       type: object
       properties:
