Syncing API documentation from 8e4cdf7745f34c01fa593f5ac4722ad90cf7af83

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3575,7 +3575,7 @@ components:
         - created_at
         - updated_at
       title: Order
-      description: Forcing a change
+      description: Forcing a change again
     product:
       type: object
       properties:
