--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3575,7 +3575,7 @@ components:
         - created_at
         - updated_at
       title: Order
-      description: Forcing a change again
+      description: Orders are requests to send devices to your members.
     product:
       type: object
       properties:
