--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v0.1.13
       with:
+        fail_on_unmatched_files: true
         files: |
           openapi/spec3.yml
           openapi/spec3.json
