Pushing v14 from CatalystHealth/catalyst#e66bc26550e333831597ffe39ff1d1d9b027f28c

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2246,12 +2246,14 @@ paths:
             description: Shows the queue for the provided user. By default when not provided
               the queue will include all  tasks assigned to all users. When
               authenticated as a user you can specify the value 'current'
-              to  show the current users task queue.
+              to  show the current users task queue. Providing `unassigned` will
+              show a global queue of all  tasks that are unassigned.
           required: false
           description: Shows the queue for the provided user. By default when not provided
             the queue will include all  tasks assigned to all users. When
             authenticated as a user you can specify the value 'current' to  show
-            the current users task queue.
+            the current users task queue. Providing `unassigned` will show a
+            global queue of all  tasks that are unassigned.
       responses:
         default:
           description: Successful response.
