--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2037,6 +2037,69 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/webhook"
+  /v1/files:
+    post:
+      summary: Upload a File
+      description: >-
+        Uploads a file to Catalyst by sending a `multipart/form-data` request
+        containing the file to upload and any additional metadata.
+
+
+        Files must be uploaded through the files API before they can be attached to messages, set as profile photos, or otherwise used by the Catalyst platform.
+      tags:
+        - Files
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: A file to upload. This field must be provided in a
+                    `multipart/form-data` request.
+                purpose:
+                  type: string
+                  enum:
+                    - message_attachment
+                  description: The purpose of the uploaded file. Each purpose imposes restrictions
+                    on supported file types and use cases.
+                  example: message_attachment
+              required:
+                - file
+                - purpose
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/file"
+  "/v1/files/{id}":
+    get:
+      summary: Retrieve a File
+      description: Retrieves the details of an existing file. You need only supply the
+        unique file identifier that was returned upon file creation.
+      tags:
+        - Files
+      parameters:
+        - in: path
+          style: simple
+          explode: true
+          name: id
+          schema:
+            type: string
+            description: Unique ID of the file
+          required: true
+          description: Unique ID of the file
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/file"
   /v1/measurements:
     post:
       summary: Create a Measurement
@@ -3385,6 +3448,7 @@ components:
         - device.activated
         - device.deactivated
         - device.deleted
+        - file.created
         - measurement.created
         - order.created
         - order.shipped
@@ -3460,6 +3524,71 @@ components:
 
 
         Once a webhook is registered and enabled, each event matching the list of subscribed events will be delivered to the endpoint you choose.
+    file:
+      type: object
+      properties:
+        object:
+          type: string
+          default: file
+          enum:
+            - file
+          example: file
+          description: Always `file`.
+        id:
+          type: string
+          description: Unique ID for the file.
+          example: fil_gdIyXM9d4LKGnewOV4OM
+        purpose:
+          type: string
+          enum:
+            - message_attachment
+          description: The purpose of this uploaded file. Each file is required to have a
+            clearly defined purpose, which controls what types of uploads are
+            allowed and where the file may be referenced.
+          example: message_attachment
+        name:
+          type: string
+          description: The filename of the file that was uploaded.
+          example: Health_Records_Release_Consent.pdf
+        mime_type:
+          type: string
+          description: The MIME type of the file that was uploaded.
+          example: application/pdf
+        size:
+          type: number
+          description: The size of the uploaded file in bytes.
+          example: 5123456
+        url:
+          type: string
+          description: Temporary URL that can be used to access the file. The URL
+            contained in this field will be valid for 7 days. Once it has
+            expired, you can re-request this resource to get a fresh URL.
+          example: https://files.fileserver.com/3T0x2MAZmnIngkcFO3O6.pdf
+        url_expires_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the url to access the file expires
+          example: 2021-05-13T16:33:00.000Z
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the file was uploaded.
+          example: 2021-05-13T16:33:00.000Z
+      required:
+        - object
+        - id
+        - purpose
+        - name
+        - mime_type
+        - size
+        - url
+        - url_expires_at
+        - created_at
+      title: File
+      description: This resource represents a file hosted on Catalyst's servers. You
+        can upload files to use throughout the platform, such as sending
+        attachments on messages. Once a file has been uploaded, you can access
+        it by accessing the `url` property of the file resource .
     measurement:
       type: object
       properties:
