Pushing v18 from CatalystHealth/catalyst#58601a05969328c0a125d1983f020dadf69a712e

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -815,8 +815,12 @@ paths:
                 subject:
                   type: string
                   description: The thread subject.
+                text:
+                  type: string
+                  description: Contents of the initial message in this thread.
               required:
                 - member
+                - text
       responses:
         default:
           description: Successful response.
