--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -73,11 +73,11 @@ paths:
                 name:
                   type: string
                   description: Name for the account.
-                  example: Catalyst
+                  example: Source Health
                 subdomain:
                   type: string
                   description: Subdomain for the account.
-                  example: catalyst
+                  example: sourcehealth
       responses:
         default:
           description: Successful response.
@@ -326,7 +326,7 @@ paths:
   /v1/members:
     post:
       summary: Create a Member
-      description: Creates a new member and registers them with Catalyst. Members must
+      description: Creates a new member and registers them with Source. Members must
         be created in order to ship devices or track measurements.
       tags:
         - Member
@@ -1053,7 +1053,7 @@ paths:
   /v1/task_definitions:
     post:
       summary: Create a Task Definition
-      description: Creates a new task definition and registers it with Catalyst. Task
+      description: Creates a new task definition and registers it with Source. Task
         defiitions must be created in order to create tasks of that type
       tags:
         - Task Definition
@@ -2178,7 +2178,7 @@ paths:
                         - diastolic_blood_pressure
                         - heart_rate
                         - systolic_blood_pressure
-                      description: Catalyst measurement type to create.
+                      description: Source measurement type to create.
                     device:
                       type: string
                       description: Device to which this measurement belongs.
@@ -2229,7 +2229,7 @@ paths:
                         - diastolic_blood_pressure
                         - heart_rate
                         - systolic_blood_pressure
-                      description: Catalyst measurement type to create.
+                      description: Source measurement type to create.
                     device:
                       type: string
                       description: Device to which this measurement belongs.
@@ -2445,7 +2445,7 @@ paths:
       summary: Create an Order
       description: >-
         Create an order to send devices to a member. Orders placed through the
-        Catalyst API will be sent directly to our fulfillment center, and
+        Source API will be sent directly to our fulfillment center, and
         generally shipped out the next day.
 
 
@@ -2678,11 +2678,11 @@ components:
         name:
           type: string
           description: Name for the account.
-          example: Catalyst
+          example: Source Health
         subdomain:
           type: string
           description: Subdomain for the account.
-          example: catalyst
+          example: sourcehealth
         test_secret_key:
           type: string
           description: Test mode API secret key for the account, only returned during
@@ -2711,7 +2711,7 @@ components:
         - created_at
         - updated_at
       title: Account
-      description: This is an object representing a Catalyst account. You can retrieve
+      description: This is an object representing a Source account. You can retrieve
         it to see account-level properties like business name, subdomain, and
         live mode status.
       x-resourceId: account
@@ -2783,10 +2783,10 @@ components:
         - deactivated_at
       title: User
       description: >-
-        Represents a user who has access to the Catalyst account.
+        Represents a user who has access to the Source account.
 
 
-        You can manage users in the Catalyst Console, and control their role which determines which resources they're able to access on the platform.
+        You can manage users in the Source Console, and control their role which determines which resources they're able to access on the platform.
       x-resourceId: user
       x-package: null
     care_team:
@@ -2996,7 +2996,7 @@ components:
         Members are people who may receive care from you.
 
 
-        Most operations in the Catalyst platform center around a particular member. You can create new members at any time.
+        Most operations in the Source platform center around a particular member. You can create new members at any time.
       x-resourceId: member
       x-package: null
     message:
@@ -3364,14 +3364,14 @@ components:
       description: >-
         A Task represents a request for the care team to perform an action on
         behalf of a member. Tasks are the fundamental backbone of workflow in
-        Catalyst. Any time you need to surface information to a member of the
-        care team, tasks should probably be your default choice.
+        Source. Any time you need to surface information to a member of the care
+        team, tasks should probably be your default choice.
 
 
         Each task is backed by a task definition which gives information about the structure of the work to be done, which you can read about in the documentation for task definitions.
 
 
-        Tasks can be created from any number of sources, including the API. The Catalyst platform will generate tasks itself in many cases, such as when a member sends a mesasge to their care team. When Catalyst generates a task automatically, we will also resolve it automatically when the work has been completed (for example, when the care team replies to the member.)
+        Tasks can be created from any number of sources, including the API. The Source platform will generate tasks itself in many cases, such as when a member sends a mesasge to their care team. When Source generates a task automatically, we will also resolve it automatically when the work has been completed (for example, when the care team replies to the member.)
       x-resourceId: task
       x-package: null
     device:
@@ -3466,7 +3466,7 @@ components:
         member.
 
 
-        Catalyst is able to send devices to members by placing orders using the ordering API. Each time an order is fulfilled, a new device is registered on the platform. As users take measurements with their devices, those readings create new measurement resources.
+        Source is able to send devices to members by placing orders using the ordering API. Each time an order is fulfilled, a new device is registered on the platform. As users take measurements with their devices, those readings create new measurement resources.
       x-resourceId: device
       x-package: monitoring
     event:
@@ -3758,7 +3758,7 @@ components:
               value:
                 type: string
                 description: Numeric value of this measurement (non-numeric not supported at
-                  this time). Catalyst always returns measurements as strings to
+                  this time). Source always returns measurements as strings to
                   avoid floating-point precision issues.
                 example: "100.45"
               unit:
