Pushing v22 from CatalystHealth/catalyst#5df09f8c6d442024224f411ce7e43bc8877f8a7a

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2125,6 +2125,31 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/file"
+      x-overrideRequestBodyCodec:
+        options: {}
+        props:
+          file:
+            options:
+              description: A file to upload. This field must be provided in a
+                `multipart/form-data` request.
+            _tag: FileCodec
+          purpose:
+            options:
+              description: The purpose of the uploaded file. Each purpose imposes restrictions
+                on supported file types and use cases.
+              example: message_attachment
+            enumObject:
+              - message_attachment
+            _tag: EnumCodec
+            enumValues:
+              - message_attachment
+        _tag: ObjectCodec
+        properties:
+          - file
+          - purpose
+        requiredProperties:
+          - file
+          - purpose
       x-methodName: create
       x-belongsToResource: file
   "/v1/files/{id}":
