Pushing v23 from CatalystHealth/catalyst#70d0e625513444baa295d7b82b67b3a4c33f407b

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -688,6 +688,26 @@ paths:
                 text:
                   type: string
                   description: Contents of the message to send.
+                thread_actions:
+                  type: object
+                  properties:
+                    status:
+                      type: string
+                      enum:
+                        - awaiting_care_team
+                        - awaiting_member
+                        - closed
+                      description: New status for the thread after sending this message. By default,
+                        Source will set the thread status to
+                        'awaiting_care_team' if the member sends the message,
+                        and 'awaiting_member' if someone on the care team send
+                        the message.
+                      example: closed
+                  description: Actions to apply to the thread after the message has been sent.
+                    Source guarantees that these actions will only be applied if
+                    the message has been successfully sent. See the
+                    documentation for nested params for information about each
+                    available action.
               required:
                 - thread
                 - text
@@ -1030,6 +1050,7 @@ paths:
                   nullable: true
                   description: ID of a user on the member's Care Team - assigns the thread to the
                     new user.
+                  example: usr_NC6MQ3FyxddKoJJpfSVL
                 status:
                   type: string
                   enum:
@@ -1037,10 +1058,12 @@ paths:
                     - awaiting_member
                     - closed
                   description: New status for the thread.
+                  example: awaiting_care_team
                 subject:
                   type: string
                   nullable: true
                   description: New subject for the thread.
+                  example: Lower back pain.
       responses:
         default:
           description: Successful response.
@@ -3171,7 +3194,7 @@ components:
             - sender
             - sent_at
           nullable: true
-          description: "Preview of the "
+          description: Preview of the most recent text message in the thread.
         created_at:
           type: string
           format: date-time
