--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -708,6 +708,23 @@ paths:
                     the message has been successfully sent. See the
                     documentation for nested params for information about each
                     available action.
+                attachments:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                        enum:
+                          - file
+                      resource:
+                        type: string
+                        description: Unique ID of the resource to be attached to this message. When
+                          attaching a file, this should  be set to the uploaded
+                          file's ID.
+                    required:
+                      - type
+                      - resource
               required:
                 - thread
                 - text
@@ -864,12 +881,55 @@ paths:
                 subject:
                   type: string
                   description: The thread subject.
-                text:
-                  type: string
-                  description: Contents of the initial message in this thread.
+                message:
+                  type: object
+                  properties:
+                    text:
+                      type: string
+                      description: Contents of the message to send.
+                    thread_actions:
+                      type: object
+                      properties:
+                        status:
+                          type: string
+                          enum:
+                            - awaiting_care_team
+                            - awaiting_member
+                            - closed
+                          description: New status for the thread after sending this message. By default,
+                            Source will set the thread status to
+                            'awaiting_care_team' if the member sends the
+                            message, and 'awaiting_member' if someone on the
+                            care team send the message.
+                          example: closed
+                      description: Actions to apply to the thread after the message has been sent.
+                        Source guarantees that these actions will only be
+                        applied if the message has been successfully sent. See
+                        the documentation for nested params for information
+                        about each available action.
+                    attachments:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          type:
+                            type: string
+                            enum:
+                              - file
+                          resource:
+                            type: string
+                            description: Unique ID of the resource to be attached to this message. When
+                              attaching a file, this should  be set to the
+                              uploaded file's ID.
+                        required:
+                          - type
+                          - resource
+                  required:
+                    - text
+                  description: The initial message to send when creating this thread.
               required:
                 - member
-                - text
+                - message
       responses:
         default:
           description: Successful response.
@@ -1073,6 +1133,99 @@ paths:
                 $ref: "#/components/schemas/thread"
       x-methodName: update
       x-belongsToResource: thread
+  /v1/files:
+    post:
+      summary: Upload a File
+      description: >-
+        Uploads a file to Source by sending a `multipart/form-data` request
+        containing the file to upload and any additional metadata.
+
+
+        Files must be uploaded through the files API before they can be attached to messages, set as profile photos, or otherwise used by the Source platform.
+      tags:
+        - File
+      parameters: []
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: A file to upload. This field must be provided in a
+                    `multipart/form-data` request.
+                purpose:
+                  type: string
+                  enum:
+                    - message_attachment
+                  description: The purpose of the uploaded file. Each purpose imposes restrictions
+                    on supported file types and use cases.
+                  example: message_attachment
+              required:
+                - file
+                - purpose
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/file"
+      x-overrideRequestBodyCodec:
+        options: {}
+        props:
+          file:
+            options:
+              description: A file to upload. This field must be provided in a
+                `multipart/form-data` request.
+            _tag: FileCodec
+          purpose:
+            options:
+              description: The purpose of the uploaded file. Each purpose imposes restrictions
+                on supported file types and use cases.
+              example: message_attachment
+            enumObject:
+              - message_attachment
+            _tag: EnumCodec
+            enumValues:
+              - message_attachment
+        _tag: ObjectCodec
+        properties:
+          - file
+          - purpose
+        requiredProperties:
+          - file
+          - purpose
+      x-methodName: create
+      x-belongsToResource: file
+  "/v1/files/{id}":
+    get:
+      summary: Retrieve a File
+      description: Retrieves the details of an existing file. You need only supply the
+        unique file identifier that was returned upon file creation.
+      tags:
+        - File
+      parameters:
+        - in: path
+          style: simple
+          explode: true
+          name: id
+          schema:
+            type: string
+            description: Unique ID of the file.
+          required: true
+          description: Unique ID of the file.
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/file"
+      x-methodName: retrieve
+      x-belongsToResource: file
   /v1/task_definitions:
     post:
       summary: Create a Task Definition
@@ -2108,99 +2261,6 @@ paths:
                 $ref: "#/components/schemas/webhook"
       x-methodName: delete
       x-belongsToResource: webhook
-  /v1/files:
-    post:
-      summary: Upload a File
-      description: >-
-        Uploads a file to Source by sending a `multipart/form-data` request
-        containing the file to upload and any additional metadata.
-
-
-        Files must be uploaded through the files API before they can be attached to messages, set as profile photos, or otherwise used by the Source platform.
-      tags:
-        - File
-      parameters: []
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
-                  description: A file to upload. This field must be provided in a
-                    `multipart/form-data` request.
-                purpose:
-                  type: string
-                  enum:
-                    - message_attachment
-                  description: The purpose of the uploaded file. Each purpose imposes restrictions
-                    on supported file types and use cases.
-                  example: message_attachment
-              required:
-                - file
-                - purpose
-      responses:
-        default:
-          description: Successful response.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/file"
-      x-overrideRequestBodyCodec:
-        options: {}
-        props:
-          file:
-            options:
-              description: A file to upload. This field must be provided in a
-                `multipart/form-data` request.
-            _tag: FileCodec
-          purpose:
-            options:
-              description: The purpose of the uploaded file. Each purpose imposes restrictions
-                on supported file types and use cases.
-              example: message_attachment
-            enumObject:
-              - message_attachment
-            _tag: EnumCodec
-            enumValues:
-              - message_attachment
-        _tag: ObjectCodec
-        properties:
-          - file
-          - purpose
-        requiredProperties:
-          - file
-          - purpose
-      x-methodName: create
-      x-belongsToResource: file
-  "/v1/files/{id}":
-    get:
-      summary: Retrieve a File
-      description: Retrieves the details of an existing file. You need only supply the
-        unique file identifier that was returned upon file creation.
-      tags:
-        - File
-      parameters:
-        - in: path
-          style: simple
-          explode: true
-          name: id
-          schema:
-            type: string
-            description: Unique ID of the file.
-          required: true
-          description: Unique ID of the file.
-      responses:
-        default:
-          description: Successful response.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/file"
-      x-methodName: retrieve
-      x-belongsToResource: file
   /v1/measurements:
     post:
       summary: Create a Measurement
@@ -3101,6 +3161,29 @@ components:
           type: string
           format: date-time
           description: The time at which this message was sent.
+        attachments:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+                enum:
+                  - file
+                description: The type of attachment. Currently, the only supported attachment
+                  type is `file`, but other attachment types may be added.
+              resource:
+                oneOf:
+                  - type: string
+                  - $ref: "#/components/schemas/file"
+                x-expandable:
+                  $ref: "#/components/schemas/file"
+                description: The resource which is attached to the message
+                example: fil_gdIyXM9d4LKGnewOV4OM
+            required:
+              - type
+              - resource
+          description: Any attachments to the message, such as files.
       required:
         - object
         - id
@@ -3109,6 +3192,7 @@ components:
         - text
         - sender
         - sent_at
+        - attachments
       title: Message
       description: >-
         Messages are exchanged between patients and their care team.
@@ -3167,6 +3251,29 @@ components:
               type: string
               description: Plain text contents of the message.
               example: I have been feeling nauseous since yesterday afternoon.
+            attachments:
+              type: array
+              items:
+                type: object
+                properties:
+                  type:
+                    type: string
+                    enum:
+                      - file
+                    description: The type of attachment. Currently, the only supported attachment
+                      type is `file`, but other attachment types may be added.
+                  resource:
+                    oneOf:
+                      - type: string
+                      - $ref: "#/components/schemas/file"
+                    x-expandable:
+                      $ref: "#/components/schemas/file"
+                    description: The resource which is attached to the message
+                    example: fil_gdIyXM9d4LKGnewOV4OM
+                required:
+                  - type
+                  - resource
+              description: Any attachments to the message, such as files.
             sender:
               anyOf:
                 - oneOf:
@@ -3191,6 +3298,7 @@ components:
               example: 2021-05-13T16:33:00.000Z
           required:
             - text
+            - attachments
             - sender
             - sent_at
           nullable: true
@@ -3238,6 +3346,73 @@ components:
         - awaiting_member
         - closed
       x-namespace: thread
+    file:
+      type: object
+      properties:
+        object:
+          type: string
+          default: file
+          enum:
+            - file
+          example: file
+          description: Always `file`.
+        id:
+          type: string
+          description: Unique ID for the file.
+          example: fil_gdIyXM9d4LKGnewOV4OM
+        purpose:
+          type: string
+          enum:
+            - message_attachment
+          description: The purpose of this uploaded file. Each file is required to have a
+            clearly defined purpose, which controls what types of uploads are
+            allowed and where the file may be referenced.
+          example: message_attachment
+        name:
+          type: string
+          description: The filename of the file that was uploaded.
+          example: Health_Records_Release_Consent.pdf
+        mime_type:
+          type: string
+          description: The MIME type of the file that was uploaded.
+          example: application/pdf
+        size:
+          type: number
+          description: The size of the uploaded file in bytes.
+          example: 5123456
+        url:
+          type: string
+          description: Temporary URL that can be used to access the file. The URL
+            contained in this field will be valid for 7 days. Once it has
+            expired, you can re-request this resource to get a fresh URL.
+          example: https://files.fileserver.com/3T0x2MAZmnIngkcFO3O6.pdf
+        url_expires_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the url to access the file expires
+          example: 2021-05-13T16:33:00.000Z
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp of when the file was uploaded.
+          example: 2021-05-13T16:33:00.000Z
+      required:
+        - object
+        - id
+        - purpose
+        - name
+        - mime_type
+        - size
+        - url
+        - url_expires_at
+        - created_at
+      title: File
+      description: This resource represents a file hosted on Source's servers. You can
+        upload files to use throughout the platform, such as sending attachments
+        on messages. Once a file has been uploaded, you can access it by
+        accessing the `url` property of the file resource .
+      x-resourceId: file
+      x-package: null
     task_definition:
       type: object
       properties:
@@ -3669,73 +3844,6 @@ components:
 
         Once a webhook is registered and enabled, each event matching the list of subscribed events will be delivered to the endpoint you choose.
       x-resourceId: webhook
-      x-package: null
-    file:
-      type: object
-      properties:
-        object:
-          type: string
-          default: file
-          enum:
-            - file
-          example: file
-          description: Always `file`.
-        id:
-          type: string
-          description: Unique ID for the file.
-          example: fil_gdIyXM9d4LKGnewOV4OM
-        purpose:
-          type: string
-          enum:
-            - message_attachment
-          description: The purpose of this uploaded file. Each file is required to have a
-            clearly defined purpose, which controls what types of uploads are
-            allowed and where the file may be referenced.
-          example: message_attachment
-        name:
-          type: string
-          description: The filename of the file that was uploaded.
-          example: Health_Records_Release_Consent.pdf
-        mime_type:
-          type: string
-          description: The MIME type of the file that was uploaded.
-          example: application/pdf
-        size:
-          type: number
-          description: The size of the uploaded file in bytes.
-          example: 5123456
-        url:
-          type: string
-          description: Temporary URL that can be used to access the file. The URL
-            contained in this field will be valid for 7 days. Once it has
-            expired, you can re-request this resource to get a fresh URL.
-          example: https://files.fileserver.com/3T0x2MAZmnIngkcFO3O6.pdf
-        url_expires_at:
-          type: string
-          format: date-time
-          description: Timestamp of when the url to access the file expires
-          example: 2021-05-13T16:33:00.000Z
-        created_at:
-          type: string
-          format: date-time
-          description: Timestamp of when the file was uploaded.
-          example: 2021-05-13T16:33:00.000Z
-      required:
-        - object
-        - id
-        - purpose
-        - name
-        - mime_type
-        - size
-        - url
-        - url_expires_at
-        - created_at
-      title: File
-      description: This resource represents a file hosted on Source's servers. You can
-        upload files to use throughout the platform, such as sending attachments
-        on messages. Once a file has been uploaded, you can access it by
-        accessing the `url` property of the file resource .
-      x-resourceId: file
       x-package: null
     measurement:
       type: object
