--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1583,6 +1583,14 @@ paths:
                     after the task was created. The due_at date must be in the
                     future.'
                   example: 2021-05-13T16:33:00.000Z
+                related:
+                  type: array
+                  items:
+                    type: string
+                    description: Unique identifier for the related resource.
+                    example: thrd_7BqeKrhbVU7c4Cigqs60
+                  description: A list of object IDs, such as threads, that are related to the
+                    task.
               required:
                 - definition
                 - member
@@ -1750,6 +1758,14 @@ paths:
                     after the task was created. The due_at date must be in the
                     future.'
                   example: 2021-05-13T16:33:00.000Z
+                related:
+                  type: array
+                  items:
+                    type: string
+                    description: Unique identifier for the related resource.
+                    example: thrd_7BqeKrhbVU7c4Cigqs60
+                  description: A list of object IDs, such as threads, that are related to the
+                    task.
       responses:
         default:
           description: Successful response.
@@ -3571,6 +3587,30 @@ components:
           format: date-time
           description: The time by which this task should be completed
           example: 2021-10-10T00:10:00.000Z
+        related:
+          type: array
+          items:
+            type: object
+            properties:
+              resource_type:
+                type: string
+                enum:
+                  - "0"
+                description: Related object type
+                example: thread
+              resource:
+                oneOf:
+                  - type: string
+                  - $ref: "#/components/schemas/thread"
+                x-expandable:
+                  $ref: "#/components/schemas/thread"
+                description: Unique identifier for the related resource.
+                example: thrd_7BqeKrhbVU7c4Cigqs60
+            required:
+              - resource_type
+              - resource
+          description: A list of related resources, such as open threads. The resource can
+            be expanded with e.g. '&expand=related.resource'.
       required:
         - object
         - id
@@ -3583,6 +3623,7 @@ components:
         - created_at
         - updated_at
         - due_at
+        - related
       title: Task
       description: >-
         A Task represents a request for the care team to perform an action on
