--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1678,6 +1678,15 @@ paths:
           required: false
           description: Filter results by status. If multiple statuses are provided, tasks
             matching any of the provided statuses will be returned.
+        - in: query
+          style: form
+          explode: true
+          name: member
+          schema:
+            type: string
+            description: Filter results by member.
+          required: false
+          description: Filter results by member.
       responses:
         default:
           description: Successful response.
