Pushing v28 from CatalystHealth/catalyst#a24cad49d7a36247ca7c987f7e5670bfa779c112

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -720,7 +720,7 @@ paths:
                       resource:
                         type: string
                         description: Unique ID of the resource to be attached to this message. When
-                          attaching a file, this should  be set to the uploaded
+                          attaching a file, this should be set to the uploaded
                           file's ID.
                     required:
                       - type
@@ -919,7 +919,7 @@ paths:
                           resource:
                             type: string
                             description: Unique ID of the resource to be attached to this message. When
-                              attaching a file, this should  be set to the
+                              attaching a file, this should be set to the
                               uploaded file's ID.
                         required:
                           - type
@@ -1439,7 +1439,7 @@ paths:
     get:
       summary: Get all Task Queue Entries
       description: Returns a list of Task Queue Entries which are tasks assigned to
-        the provided user, grouped by member,  and ordered by priority using the
+        the provided user, grouped by member, and ordered by priority using the
         due_at property.
       tags:
         - Workflow
@@ -1498,16 +1498,16 @@ paths:
           schema:
             type: string
             description: Shows the queue for the provided user. By default when not provided
-              the queue will include all  tasks assigned to all users. When
-              authenticated as a user you can specify the value 'current'
-              to  show the current users task queue. Providing `unassigned` will
-              show a global queue of all  tasks that are unassigned.
+              the queue will include all tasks assigned to all users. When
+              authenticated as a user you can specify the value 'current' to
+              show the current users task queue. Providing `unassigned` will
+              show a global queue of all tasks that are unassigned.
           required: false
           description: Shows the queue for the provided user. By default when not provided
-            the queue will include all  tasks assigned to all users. When
-            authenticated as a user you can specify the value 'current' to  show
+            the queue will include all tasks assigned to all users. When
+            authenticated as a user you can specify the value 'current' to show
             the current users task queue. Providing `unassigned` will show a
-            global queue of all  tasks that are unassigned.
+            global queue of all tasks that are unassigned.
       responses:
         default:
           description: Successful response.
@@ -1662,6 +1662,23 @@ paths:
           required: false
           description: A limit on the number of objects to be returned. Limit can range
             between 1 and 100.
+        - in: query
+          style: form
+          explode: true
+          name: sort
+          schema:
+            type: string
+            enum:
+              - created_at
+              - due_at
+              - -created_at
+              - -due_at
+            description: Sort field for the results. A '-' prefix indicates sorting by that
+              field in descending order, otherwise the order will be ascending.
+            example: created_at
+          required: false
+          description: Sort field for the results. A '-' prefix indicates sorting by that
+            field in descending order, otherwise the order will be ascending.
         - in: query
           style: form
           explode: true
