Pushing v30 from CatalystHealth/catalyst#209a5192702c621886bd80c129dede9cbf1378ad

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3382,7 +3382,7 @@ components:
               resource_type:
                 type: string
                 enum:
-                  - "0"
+                  - thread
                 description: Related object type
                 example: thread
               resource:
