Pushing v37 from API 6df3f6a5edcd7fc52dd72a2ccbefa964980b5322

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -8,7 +8,7 @@ info:
     email: support@sourcehealth.com
     url: https://sourcehealth.com/docs/api
 servers:
-  - url: https://api.withcatalyst.com
+  - url: https://api.sourcehealth.com
     description: Source Production
 security:
   - bearer: []
