--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4445,6 +4445,20 @@ components:
           nullable: true
           description: Timestamp of when the thread was last closed.
           example: null
+        member_last_read:
+          type: string
+          format: date-time
+          nullable: true
+          description: Timestamp indicating the point through which the member has read.
+            All messages with a `sent_at` after this point are considered
+            unread. If null, the member has not seen any messages on this
+            thread.
+        last_message_at:
+          type: string
+          format: date-time
+          description: Timestamp of the last message that was sent on this thread. This
+            message has been read by the member if the last_read timestamp is
+            greater than or equal to the last_message_at timestamp
       required:
         - object
         - id
@@ -4456,6 +4470,8 @@ components:
         - created_at
         - updated_at
         - closed_at
+        - member_last_read
+        - last_message_at
       title: Thread
       description: >-
         The Thread resource represents a conversation between a member and/or
