Pushing v44 from API dbc1e75bde0f78f55dc02282a280a4dc694cf59e

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4277,6 +4277,7 @@ components:
         - member
         - assignee
         - summary
+        - description
         - status
         - assignment_method
         - created_at
